--- a/css/style.css
+++ b/css/style.css
@@ -636,7 +636,7 @@ margin: 0;
 .parallax {
     display: block;
     width: 100%;
-    height: 525px;
+    height: 100%;
     overflow: hidden;
     padding: 200px 0;
 }
