--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@
 /* 1. TEMPLATE BACKGROUNDS */
 /* 1.1. fullscreen slider BACKGROUND */
 .bg-img-1 {
-    background-image: url(../img/background/hero-bg-1.jpg);
+    background-image: url(../img/background/bg-1.jpg);
 }
 
 .bg-img-2 {
@@ -85,11 +85,11 @@
 }
 
 .bg-img-3 {
-    background-image: url(../img/background/hero-bg-3.jpg);
+    background-image: url(../img/background/bg-3.jpg);
 }
 
 .bg-img-4 {
-    background-image: url(../img/background/hero-bg-4.jpg);
+    background-image: url(../img/background/bg-4.jpg);
 }
 
 .bg-img-5 {
