--- a/css/style2.css
+++ b/css/style2.css
@@ -77,7 +77,7 @@
 /* 1. TEMPLATE BACKGROUNDS */
 /* 1.1. fullscreen slider BACKGROUND */
 .bg-img-1 {
-    background-image: url(../img/background/hero-bg-1.jpg);
+    background-image: url(../img/background/bg-1.jpg);
 }
 
 .bg-img-2 {
@@ -85,11 +85,11 @@
 }
 
 .bg-img-3 {
-    background-image: url(../img/background/hero-bg-3.jpg);
+    background-image: url(../img/background/bg-3.jpg);
 }
 
 .bg-img-4 {
-    background-image: url(../img/background/hero-bg-4.jpg);
+    background-image: url(../img/background/bg-4.jpg);
 }
 
 .bg-img-5 {
@@ -5513,13 +5513,13 @@ button {
 
 @media only screen and (max-width: 768px) {
     .logo-light {
-        height: 75px;
+        height: 65px;
     }
 }
 
 @media only screen and (max-width: 768px) {
     .logo-dark {
-        height: 75px;
+        height: 52px;
     }
 }
 
@@ -5708,7 +5708,16 @@ button {
             background: #1e1e1e;
             margin-top: 10px;
             left: 2px;
+            z-index: 2;
+            padding-left: 0px;
         }
+
+    .navbar-desk{
+        padding-left: 60px;
+
+    }
+
+        .bg-img-4
 
             .navbar-collapse.navbar-collapse-position-primary {
                 background: #1e1e1e;
